Adding my name to the footer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
     <footer>
-      <p>Copyright © The Odin Project 2024</p>
+      <p>Copyright © The Odin Project 2024 Done by Aoamos(Akanni Opeyemi)</p>
     </footer>
   </body>
 </html>
